Campfire bucket + nouilles

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -7,8 +7,9 @@ modId="ptndemerde"
 version="1.0.0"
 displayName="ptndemerde"
 displayURL="https://mcreator.net"
+logoFile="logo.png"
 credits="Created using mod maker MCreator - https://mcreator.net/about"
-authors="Laony, MCreator"
+authors="sillyLao, shepoj"
 
 [[dependencies.ptndemerde]]
     modId="minecraft"
